--- a/imgs/attribution.html
+++ b/imgs/attribution.html
@@ -1,3 +1,2 @@
-<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-
+<a target="_blank" href="https://icons8.com/icon/8xp7ADNZfPyi/sun">Sun</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
 
