--- a/imgs/attribution.html
+++ b/imgs/attribution.html
@@ -1,2 +1,1 @@
-<a target="_blank" href="https://icons8.com/icon/8xp7ADNZfPyi/sun">Sun</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-
+<a href="https://www.flaticon.com/free-icons/sun" title="sun icons">Sun icons created by Freepik - Flaticon</a>
