--- a/imgs/attribution.html
+++ b/imgs/attribution.html
@@ -1,1 +1,3 @@
-<a href="https://www.flaticon.com/free-icons/sun" title="sun icons">Sun icons created by Freepik - Flaticon</a>
+<a href="https://www.flaticon.com/free-icons/lotus" title="lotus icons">Lotus icons created by Freepik - Flaticon</a>
+
+
